--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="The Heart of Gold - A Bullet Heaven RPG with deep mechanics and high replayability. Face thousands of enemies, collect weapons, and survive intense waves of combat.">
     <meta name="theme-color" content="#c41e5c">
     <link rel="icon" type="image/x-icon" href="./src/assets/Logo.png">
-    <link rel="stylesheet" href="/src/styles/general.css">
-    <link rel="stylesheet" href="/src/styles/styles.css">
+    <link rel="stylesheet" href="./src/styles/general.css">
+    <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 <body data-state="init">
     <script type="module" src="./src/App.js"></script>
