Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           crossorigin="anonymous" referrerpolicy="no-referrer">
     
     <!-- Stylesheets -->
+     <link rel="stylesheet" href="./src/styles/general.css">
     <link rel="stylesheet" href="./src/styles/variables.css">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/base.css">
