Enhance News Section Styles and Responsiveness
- Updated the news section styles with a new animated background and floating text effects.
- Improved the layout and responsiveness for various screen sizes, including adjustments for large desktops, small desktops, tablets, and phones.
- Added new responsive styles for carousel components and category tabs.
- Introduced a new speed decoration icon for visual enhancement.
- Created a new asset for the speed decoration.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
-    <title>The Heart of Gold</title>
+    <title>The Heart of Gold Official Site</title>
     <meta name="description" content="The Heart of Gold - A Bullet Heaven RPG with deep mechanics and high replayability.">
     <meta name="theme-color" content="#c41e5c">
     
