Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <link rel="stylesheet" href="./src/styles/home.css">
     <link rel="stylesheet" href="./src/styles/news.css">
     <link rel="stylesheet" href="./src/styles/responsive.css">
+    <link rel="stylesheet" href="./src/styles/section-nav.css">
+    <link rel="stylesheet" href="./src/styles/overview.css">
 </head>
 <body data-state="init">
     <!-- WebGL Shaders for Sakura Petals -->
