--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://luvrksnskye.github.io/TheHeartOfGold/">
     <meta property="og:title" content="The Heart of Gold Official Site">
     <meta property="og:description" content="A Bullet Heaven RPG with deep mechanics and high replayability.">
-    <meta property="og:image" content="https://luvrksnskye.github.io/TheHeartOfGold/images/og-image.jpg">
+    <meta property="og:image" content="./src/assets/Officialsitecover.png">
     <meta property="og:site_name" content="The Heart of Gold">
     <meta property="og:locale" content="en_US">
     
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://luvrksnskye.github.io/TheHeartOfGold/">
     <meta property="twitter:title" content="The Heart of Gold - Official Site">
     <meta property="twitter:description" content="A Bullet Heaven RPG with deep mechanics and high replayability.">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="./src/assets/Officialsitecover.png">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://luvrksnskye.github.io/TheHeartOfGold/">
