Add Open Graph meta tags for improved social media sharing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <!-- HTML Meta Tags -->
 <title>The Heart of Gold Official Site</title>
 <meta name="description" content="A Bullet Heaven RPG with deep mechanics and high replayability. Enjoy a colorful and attractive visual style, with real-time lighting, dynamic shadows, and day and night cycles that bring the game world to life!">
+<meta property="og:image" content="https://luvrksnskye.github.io/TheHeartOfGold/src/assets/Officialsitecover.png">
+<meta property="og:image:width" content="1920">
+<meta property="og:image:height" content="1080">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://luvrksnskye.github.io/TheHeartOfGold/">
