Feature    - Settings Panel: A new settings panel has been implemented, allowing control over sound effects (SFX) and music volume. This includes a new SettingsMenu.js module to manage its visibility.
- New Assets: Added new UI elements, including a settings panel background, decorative lines, a close button and a volume slider track. New sound effects for "check" and "cancel" have also been included, along with a "bullet-heaven" gameplay video.

Fix
- UI Updates: The main navigation bar now includes a button to access the new settings panel. The layout of the site features and overview sections has been adjusted to accommodate the new UI elements.

- Audio: The AudioManager.js has been updated to handle the new SFX and music controls.

  Refactor
   - SFX Management: A new SFXManager.js has been introduced to better handle sound effects, improving modularity.

- State Management: The StateManager.js has been updated to manage the state of the new settings panel.

- Code Structure: Multiple files, including App.js and several modules, have been updated to support the new settings panel and improve overall code organization.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <meta name="twitter:title" content="The Heart of Gold Official Site">
     <meta name="twitter:description" content="A Bullet Heaven RPG with deep mechanics and high replayability.">
     <meta name="twitter:image" content="https://luvrksnskye.github.io/TheHeartOfGold/src/assets/Officialsitecoveralt.png">
-    <meta name="theme-color" content="#ff5f9a">
     
     <!-- Preconnect -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
@@ -55,6 +54,7 @@
     <link rel="stylesheet" href="./src/styles/overview.css">
     <link rel="stylesheet" href="./src/styles/game-features.css">
     <link rel="stylesheet" href="./src/styles/section-nav.css">
+    <link rel="stylesheet" href="./src/styles/settings.css">
     <link rel="stylesheet" href="./src/styles/responsive.css">
 </head>
 <body data-state="init">
