Update meta tags in index.html for new website URLs and add new asset images. SORRYYYYYY Dx

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     
     <title>The Heart of Gold Official Site</title>
     <meta name="description" content="A Bullet Heaven RPG with deep mechanics and high replayability. Enjoy a colorful and attractive visual style, with real-time lighting, dynamic shadows, and day and night cycles that bring the game world to life!">
-    <meta property="og:image" content="https://luvrksnskye.github.io/TheHeartOfGold/src/assets/Officialsitecover.png">
+    <meta property="og:image" content="https://theheartofgoldgame.com//src/assets/Officialsitecover.png">
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
-    <meta property="og:url" content="https://luvrksnskye.github.io/TheHeartOfGold/">
+    <meta property="og:url" content="https://theheartofgoldgame.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="The Heart of Gold Official Site">
     <meta property="og:description" content="A Bullet Heaven RPG with deep mechanics and high replayability. Enjoy a colorful and attractive visual style, with real-time lighting, dynamic shadows, and day and night cycles that bring the game world to life!">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="luvrksnskye.github.io">
-    <meta property="twitter:url" content="https://luvrksnskye.github.io/TheHeartOfGold/">
+    <meta property="twitter:domain" content="theheartofgoldgame.com">
+    <meta property="twitter:url" content="https://theheartofgoldgame.com/">
     <meta name="twitter:title" content="The Heart of Gold Official Site">
     <meta name="twitter:description" content="A Bullet Heaven RPG with deep mechanics and high replayability.">
-    <meta name="twitter:image" content="https://luvrksnskye.github.io/TheHeartOfGold/src/assets/Officialsitecoveralt.png">
+    <meta name="twitter:image" content="https://theheartofgoldgame.com//src/assets/Officialsitecoveralt.png">
     
     <!-- Preconnect -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
