* Optimized: Better event cleanup, transition handling, state management   * Optimized: Better state management, flicker prevention, GPU acceleration

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <link rel="stylesheet" href="./src/styles/characters.css">
     <link rel="stylesheet" href="./src/styles/section-nav.css">
     <link rel="stylesheet" href="./src/styles/settings.css">
+    <link rel="stylesheet" href="./src/styles/blog-loading.css">
+    <link rel="stylesheet" href="./src/styles/blog.css">
     <link rel="stylesheet" href="./src/styles/responsive-mobile.css">
     <link rel="stylesheet" href="./src/styles/responsive-desktop.css">
 </head>
