--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
           crossorigin="anonymous" referrerpolicy="no-referrer">
     
-       <!-- Stylesheets -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="./src/styles/variables.css">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/base.css">
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="./src/styles/overview.css">
     <link rel="stylesheet" href="./src/styles/game-features.css">
     <link rel="stylesheet" href="./src/styles/characters.css">
+    <link rel="stylesheet" href="./src/styles/soundtrack.css">
     <link rel="stylesheet" href="./src/styles/section-nav.css">
     <link rel="stylesheet" href="./src/styles/settings.css">
     <link rel="stylesheet" href="./src/styles/blog-loading.css">
